# financial-parser

./: Cargo.toml
.github/workflows/: rust.yml
cli-comparer/: Cargo.toml  README.md
cli-comparer/src/: main.rs
cli-comparer/tests/: yp_cli_comparer_tests.rs
cli-converter/: Cargo.toml  README.md
cli-converter/src/: main.rs
cli-converter/tests/: yp_cli_converter_tests.rs
parser/: Cargo.toml  README.md
parser/src/: errors.rs  format.rs  lib.rs  model.rs  parser.rs
parser/src/format/: common.rs  yp_bank_bin_format.rs  yp_bank_csv_format.rs  yp_bank_text_format.rs
parser/src/model/: transaction.rs  transaction_status.rs  transaction_type.rs
parser/tests/: yp_bank_bin_format_tests.rs  yp_bank_csv_format_tests.rs  yp_bank_text_format_tests.rs
