[package]
name = "financial-parser"
version = "0.1.0"
edition = "2021"
description = "A library for parsing financial data formats"

[dependencies]
thiserror = "2.0"
chrono = "0.4"
indoc = "2.0"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
byteorder = "1.5.0"
clap = { version ="4.5.53", features = ["derive"] }
